--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        #ָ指定nacos server地址
+        #ָ指定nacos server地址，用于注册当前服务
         server-addr: 121.37.227.17:8848
   application:
     name: order
